--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ skill_keywords: [PHP, Javascript, HTML+CSS, Linux, Laravel, Git, Mac, Thinkphp, 
 timezone:    PRC
 encoding: "utf-8"
 
-url: http://silen.com.cn
+url: http://git.silen.com.cn
 #url: http://127.0.0.1:4000
 baseurl:  "/"
 domain:    silen.com.cn
